# fusogen

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.base.json
anchor/: Anchor.toml  Cargo.toml  package-lock.json  package.json
anchor/modules/wormhole-anchor-sdk/: Cargo.toml
anchor/modules/wormhole-anchor-sdk/src/wormhole/: accounts.rs
anchor/programs/fusogen/: Cargo.toml
anchor/programs/fusogen/src/: error.rs  lib.rs  message.rs
anchor/programs/fusogen/src/instructions/: merge.rs  mod.rs  terms.rs
anchor/programs/fusogen/src/state/: mod.rs  terms.rs
anchor/src/: fusogen-exports.ts  index.ts
anchor/tests/: 00_environment.spec.ts  01_fusogen.spec.ts  fusogen.spec.ts
anchor/tests/helpers/: consts.ts  utils.ts
scripts/: check-ata-balances.tsx  create-new-mint.tsx  generate-mint-and-ata.js  generate-mint-and-ata.ts  generate-mint-and-ata.tsx  mintA-startup-from-secret.tsx  mintB-startup-from-secret.tsx
web/app/: global.css  layout.tsx
web/app/fusogen/: page.tsx
web/components/cluster/: cluster-data-access.tsx  cluster-ui.tsx
web/components/dashboard/: dashboard-feature.tsx
web/components/fusogen/: fusogen-data-access.tsx  fusogen-feature.tsx  fusogen-transaction-manager.tsx  fusogen-ui.tsx
web/components/ui/: ui-layout.tsx
