[package]
name = "wormhole-anchor-sdk"
version = "0.30.1"
description = "SDK using Anchor interfaces to interact with Wormhole Solana Programs"
edition = "2021"
authors = ["W7"]
license = "Apache-2.0"
homepage = "https://github.com/wormhole-foundation/wormhole-scaffolding"
repository = "https://github.com/wormhole-foundation/wormhole-scaffolding"

[features]
default = ["mainnet"]
mainnet = []
solana-devnet = []
tilt-devnet = []
token-bridge = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true, default-features = false } # Explicitly disable default features for anchor-lang
anchor-spl = { workspace = true, default-features = false }  # Explicitly disable default features for anchor-spl
cfg-if = "1.0.0"
wormhole-io = { workspace = true }

[dev-dependencies]
rand = "0.8"
